--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!-- NAVBAR -->
 
-  <nav class="navbar navbar-expand-lg" style="background-color:#EC831E !important;">
+  <nav class="navbar navbar-expand-lg fixed-top" style="background-color:#EC831E !important;">
     <div class=" container p-2">
       <a class="navbar-brand fw-bold" style="color:#ffffff !important;" href="#">KANTINKU</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
