--- a/Keranjang.html
+++ b/Keranjang.html
@@ -62,21 +62,21 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="nama-content">
-                            <img src="asset/img/SegoGoreng.jpg" alt="" />
+                        <td class="nama-content" id="esteh">
+                            <img src="asset/img/es_teh.jpg" alt="" />
                             <h4>
-                                Food Title 1
-                                <p>Nama Booth 1</p>
+                                Es Teh
+                                <p>Booth 1</p>
                             </h4>
                         </td>
                         <td class="harga-content">
-                            <h4>15K</h4>
+                            <h4>2K</h4>
                         </td>
                         <td class="jumlah-content">
-                            <h4><input value="1" type="number" /></h4>
+                            <h4><input value="3" type="number" /></h4>
                         </td>
                         <td class="harga-content">
-                            <h4>30K</h4>
+                            <h4>6K</h4>
                         </td>
                         <td class="remove-content">
                             <a href="#"><i class="trash-alt"> x </i></a>
@@ -84,18 +84,18 @@
                     </tr>
                     <!-- No 2 -->
                     <tr>
-                        <td class="nama-content">
+                        <td class="nama-content" id = "nasigoreng">
                             <img src="asset/img/SegoGoreng.jpg" alt="" />
                             <h4>
-                                Food Title 2
-                                <p>Nama Booth 2</p>
+                                Nasi Goreng
+                                <p>Booth 1</p>
                             </h4>
                         </td>
                         <td class="harga-content">
-                            <h4>15K</h4>
+                            <h4>10K</h4>
                         </td>
                         <td class="jumlah-content">
-                            <h4><input value="1" type="number" /></h4>
+                            <h4><input value="3" type="number" /></h4>
                         </td>
                         <td class="harga-content">
                             <h4>30K</h4>
@@ -109,7 +109,7 @@
         </section>
         <section id="Total">
             <h4>
-                60K
+                36K
                 <span>
                     <button>Save</button>
                 </span>
