--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <td>Es Teh</td>
                 <td>Rp. 2.000</td>
                 <td>Booth 1</td>
-                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">✔</a></td>
+                <td><a href="keranjang.html#esteh" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">✔</a></td>
               </tr>
             </tbody>
             <tbody>
@@ -87,7 +87,7 @@
                 <td>Nasi Goreng</td>
                 <td>Rp. 10.000</td>
                 <td>Booth 1</td>
-                <td><a href="#menu" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">✔</a></td>
+                <td><a href="keranjang.html#nasigoreng" class="btn btn-primary btn-sm" style="border:none;background-color: #EC831E !important;">✔</a></td>
               </tr>
             </tbody>
             <tbody>
